--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ logging.log
 notes.txt
 Ohio_dataset_Multitask learning_PH 1 hr_Offset Correction + Masking + Filling Nulls (Underfitting).ipynb
 train draft.ipynb
+__pycache__/
